<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    android:orientation="horizontal">
    <Button
        android:text="@string/back"
        android:id="@+id/nav_back"
        style="@style/MainHeaderText"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/nav_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nav_done"
        android:layout_alignBottom="@+id/nav_done"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/mic_quality_test"
        android:textColor="#000000"
        android:textStyle="bold" />

    <Button
        android:text="@string/done"
        android:id="@+id/nav_done"
        style="@style/MainHeaderText"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>